# growlnotify.py

./: README.md  setup.cfg
growlnotify/: __init__.py
tests/growlnotify/examples/: message.py  sticky.py  title.py
