[metadata]
name = growlnotify
version = 2018.12.22
url = https://github.com/looking-for-a-job/growlnotify.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = growlnotify

[options]
install_requires = 
	public
	setuptools
packages = 
	growlnotify
