# https://pypi.org/project/setupcfg-generator/
[metadata]
name = growlnotify
version = 2019.4.13
url = https://github.com/looking-for-a-job/growlnotify.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = growlnotify

[options]
install_requires = 
	public
	setuptools
packages = 
	growlnotify
